fixed JSON String for the STOMP JS.

--- a/src/app/livechat/livechat.component.html
+++ b/src/app/livechat/livechat.component.html
@@ -23,7 +23,7 @@
           </tr>
           </thead>
           <tbody *ngFor="let greeting of greetings" >
-            <tr><td>{{greeting}} </td></tr>
+            <tr><td>{{greeting.description}} </td><td>{{greeting.name}}</td></tr>
           </tbody>
         </table>
       </div>
